# pyISSM

./: .zenodo.json  pyproject.toml
.github/workflows/: benchmark-main-vs-pr.yml  build-issm.yml
docs/source/: conf.py
src/pyissm/model/: execute.py
src/pyissm/model/classes/: hydrology.py  smb.py
test/ci_tests/: test258.py
tutorials/: 1_pyISSM_intro.ipynb  ex1_SquareIceShelf.ipynb  ex1_SquareIceShelf_vis1.ipynb  ex2_PineIslandGlacier.ipynb
tutorials/assets/Param/: pig_param.py
